codex-rs/xcodex/tui2/src/bottom_pane/snapshots/codex_tui2__bottom_pane__footer__tests__footer_ctrl_c_quit_running.snap
---
source: xcodex/tui2/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  100% context left                                                             "
"  ctrl + c again to quit                                                        "
