codex-rs/xcodex/tui2/src/bottom_pane/snapshots/codex_tui2__bottom_pane__footer__tests__footer_esc_hint_primed.snap
---
source: xcodex/tui2/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  100% context left                                                             "
"  esc again to edit previous message                                            "
