codex-rs/xcodex/tui2/src/bottom_pane/snapshots/codex_tui2__bottom_pane__footer__tests__footer_shortcuts_shift_and_esc.snap
---
source: xcodex/tui2/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  100% context left                                                             "
"  / for commands                  ctrl + o for ⚡Tools                          " Hidden by multi-width symbols: [(48, " ")]
"  ! for shell commands            shift + enter for newline                     "
"  tab to queue message            @ for file paths                              "
"  ctrl + v to paste images        esc again to edit previous message            "
"  ctrl + c to exit                shift + back tab to toggle plan mode          "
"                                  ctrl + t to view transcript                   "
