codex-rs/xcodex/tui2/src/bottom_pane/snapshots/codex_tui2__bottom_pane__footer__tests__footer_status_bar_git_context.snap
---
source: xcodex/tui2/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  72% context left · ? for shortcuts ·  feature-branch ·  /repo               "
